--- a/package.json
+++ b/package.json
@@ -12,14 +12,18 @@
     "@types/node": "22.15.21",
     "@types/react": "19.1.5",
     "@types/react-dom": "19.1.5",
-    "autoprefixer": "10.4.21",
     "eslint": "9.27.0",
     "eslint-config-next": "15.1.8",
+    "init": "^0.1.2",
     "next": "15.1.8",
-    "postcss": "8.5.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "tailwindcss": "4.1.7",
+    "shadcn-ui": "^0.9.5",
     "typescript": "5.8.3"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.5"
   }
 }
