--- a/package.json
+++ b/package.json
@@ -9,16 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^4.31.8",
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-slot": "^1.2.3",
     "@types/node": "22.15.21",
     "@types/react": "19.1.5",
     "@types/react-dom": "19.1.5",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "eslint": "9.27.0",
     "eslint-config-next": "15.1.8",
     "init": "^0.1.2",
+    "lucide-react": "^0.511.0",
     "next": "15.1.8",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "shadcn-ui": "^0.9.5",
+    "tailwind-merge": "^3.3.0",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "5.8.3"
   },
   "devDependencies": {
