--- a/package.json
+++ b/package.json
@@ -21,13 +21,14 @@
     "eslint-config-next": "15.1.8",
     "init": "^0.1.2",
     "lucide-react": "^0.511.0",
-    "next": "15.1.8",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "next": "^15.2.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "shadcn-ui": "^0.9.5",
     "tailwind-merge": "^3.3.0",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "5.8.3"
+    "typescript": "5.8.3",
+    "zustand": "^4.4.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
