--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@clerk/nextjs": "^4.31.8",
     "@hookform/resolvers": "^5.0.1",
+    "@prisma/client": "^6.8.2",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
@@ -40,7 +41,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.31",
-    "prisma": "^5.1.0",
+    "prisma": "^6.8.2",
     "tailwindcss": "^3.3.5"
   }
 }
