--- a/package.json
+++ b/package.json
@@ -36,10 +36,12 @@
     "lucide-react": "^0.511.0",
     "next": "^15.2.3",
     "next-cloudinary": "^4.17.1",
+    "next-themes": "^0.4.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.56.4",
     "react-hot-toast": "^2.5.2",
+    "recharts": "^2.15.3",
     "shadcn-ui": "^0.9.5",
     "stripe": "^18.2.0",
     "tailwind-merge": "^3.3.0",
