--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,8 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
+    "noEmitOnError": false,
+
     "plugins": [
       {
         "name": "next"
